syntax = "proto3";
package thesixnetwork.sixnft.nftmngr.v062;

option go_package = "github.com/thesixnetwork/sixnft/x/nftmngr/types/v062";
import "nftmngr/v062/nft_data.proto"; 

message NftCollection {
  string nftSchemaCode = 1;
  uint64 total = 2;
  repeated NftData nftDatas = 3; 
  
}

